# agentic-sdlc

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  server.py
agentic_sdlc/: __init__.py  cli.py  config.py  logging_config.py  models.py
agentic_sdlc/agents/: __init__.py  base.py  codebase_agent.py  codegen_agent.py  decomposition_agent.py  requirement_agent.py  summary_agent.py  validation_agent.py
agentic_sdlc/guardrails/: __init__.py  input_guard.py  output_guard.py
agentic_sdlc/hitl/: __init__.py  approval.py
agentic_sdlc/llm/: __init__.py  client.py  fixtures.py  jsonio.py  mock.py
agentic_sdlc/orchestration/: __init__.py  dag.py  orchestrator.py  reporting.py  state.py
agentic_sdlc/tools/: __init__.py  code_runner.py  filesystem.py
docs/: ARCHITECTURE.md  EXAMPLES.md  TESTING.md
examples/: ambiguous_make_it_better.md  brownfield_add_rate_limiting.md  greenfield_url_shortener.md
tests/: test_dag.py  test_guardrails.py  test_models.py  test_orchestrator.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.jsx
ui/src/components/: ArtifactViewer.jsx  LogStream.jsx  PromptPanel.jsx  Settings.jsx
