[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-sdlc"
version = "1.0.0"
description = "An agentic system that drives a software requirement through the SDLC under controlled autonomy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
# Needed only for live (non-mock) runs against the real Anthropic API.
live = ["anthropic>=0.40"]
# Needed to run server.py (Web UI backend) AND the generated URL-shortener app + its tests.
app = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "httpx>=0.27"]
# Everything: pytest + live SDK + app deps (covers all development scenarios).
dev = ["pytest>=8.0", "anthropic>=0.40", "fastapi>=0.110", "uvicorn[standard]>=0.29", "httpx>=0.27"]

[project.scripts]
agentic-sdlc = "agentic_sdlc.cli:main"

[tool.setuptools.packages.find]
include = ["agentic_sdlc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
