[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-sdlc"
version = "1.0.0"
description = "An agentic system that drives a software requirement through the SDLC under controlled autonomy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
# Anthropic SDK — for live runs against Claude.
live = ["anthropic>=0.40"]
# OpenAI SDK — for any OpenAI-compatible provider (OpenAI, Groq, Gemini, Ollama, custom).
compat = ["openai>=1.0"]
# server.py (Web UI backend) + the generated URL-shortener app + its tests.
app = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "httpx>=0.27"]
# Everything: all of the above + pytest.
dev = ["pytest>=8.0", "anthropic>=0.40", "openai>=1.0", "fastapi>=0.110", "uvicorn[standard]>=0.29", "httpx>=0.27"]

[project.scripts]
agentic-sdlc = "agentic_sdlc.cli:main"

[tool.setuptools.packages.find]
include = ["agentic_sdlc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
